log-output/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: log-output-cm
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: main
          image: 3nd3r1/log-output:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/data
